# mocd

./: .gdbinit  .gitignore  Cargo.toml  README.md  last_metadata.txt  package-lock.json
src/: db.rs  lib.rs  main.rs  parser.rs  sender.rs  ui.rs
