[package]
name = "mocp"
version = "0.1.0"
edition = "2021"

[lib]
name = "mocp_lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0.148"
serde_json = "1.0"
chrono = "0.4.23"
