[package]
name = "mocp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.23"
tui = "0.19"
crossterm = "0.26"
