[package]
name = "mocp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.23"
tui = "0.19"
crossterm = "0.27"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
unicode-width = "0.1.5"
whoami = "1.5.1"
once_cell = "1.19.0"
